<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">UnivrApp</string>
    <string name="about_name">Davide Vallicella</string>
    <string name="about_email">vallicella.davide@gmail.com</string>
    <string name="channel_title">Sottoscrizioni</string>
    <string name="subscribe_title">Docenti</string>
    <string name="subscribed">Iscritto</string>
    <string name="last_update_notification">{date}</string>
    <string name="info_about_me">Sviluppato da uno studente della \n Facolt&#224; di Matematica, Fisica e Scienze Naturali,\n Dell\'Universit&#224; di verona 2012&#8211;2013</string>
    <string name="mark_all_read">Contrassegna tutto come letto</string>
    <string name="new_items_notification">Trovati {total} avvisi.</string>
    <string name="new_lecturers_notification">Trovati {total} docenti.</string>
    <string name="not_load_notification">Impossibile caricare il feed.</string>
    <string name="not_load_lecturer_notification">Impossibile caricare i docenti.</string>
    <string name="clean">Rimossi {total} avvisi</string>
    <string name="unsub_channel_dialog_title">Cancellazione canali</string>
    <string name="unsub_channel_dialog">I canali selezionati verranno rimossi, continuare?</string>
    <string name="unsub_channel_dialog2">Cancellazione dei canali selezionati</string>
    <string name="sub_channel_dialog_title">Sottoscriviti</string>
    <string name="sub_channel_dialog">Abbonarsi ai canali?</string>
    <string name="sub_channel_dialog2">Iscrizione ai canali selezionati</string>
    <string name="contact_dialog_title">Seleziona numero</string>
    <string name="yes">si</string>
    <string name="no">no</string>
    <string name="success">Riuscito</string>
    <string name="updated">Aggiornato</string>
    <string name="updating">Aggiornamento&#8230;</string>
    <string name="clear_cache_menu">Svuota Cache</string>
    <string name="clear_cache_complete_toast">La Caches è stata pulita</string>
    <string name="loading">Caricamento&#8230;</string>
    <string name="search">Trova</string>
    <string name="desc"> </string>

    <!-- SETTINGS KEYS -->
    <string name="auto_update_key">auto_update</string>
    <string name="update_interval_key">update_interval</string>
    <string name="language_key">language</string>
    <string name="show_updated_channels_key">show_updated_channels</string>
    <string name="first_time_key">first_time</string>

    <!-- EXCEPTION -->
    <string name="univrapp_connection_exception">Connettività limitata o assente</string>

    <!-- MENU -->
    <string name="subscribe">Sottoscriviti</string>
    <string name="unsubscribe">Annulla l\'iscrizioni</string>
    <string name="select_all">Seleziona tutto</string>
    <string name="settings">Impostazioni</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="clear">Elimina</string>
    <string name="view_contact">Mostra contatto</string>
    <string name="reload">Ricarica</string>
    <string name="up">Attiva notifiche</string>
    <string name="mute">Mantieni silenzioso</string>
    <string name="web_page">Pagina Web</string>
    <string name="github">GitHub</string>

    <!-- CONTACT -->
    <string name="contact_title">Contatto</string>
    <string name="contact_header">Contatti</string>
    <string name="info_header">Info</string>
    <string name="contact_office">Chiama ufficio</string>
    <string name="contact_lab">Chiama Laboratorio</string>
    <string name="contact_mail">Invia e-mail</string>
    <string name="contact_department">Dipartimento</string>

    <!-- PREFERENCE -->
    <string name="pref_categ_sync">Sincronizzazione</string>
    <string name="pref_categ_user_prof">Profilo Utente</string>
    <string name="pref_categ_user_notify">Notifiche</string>
    <string name="pref_wify_only">Aggiorna solo con WiFi</string>
    <string name="pref_wify_only_summary">Aggiornamento automatico solo WiFi</string>
    <string name="pref_send_report">Invia segnalazioni di errore</string>
    <string name="pref_send_report_summary">Aiuta a correggere i bug</string>
    <string name="pref_auto_update">Aggiornamento automatico</string>
    <string name="pref_auto_update_summary">Aggiornamento automatico di tutte le sottoscrizioni</string>
    <string name="pref_update_interval">Intervallo di aggiornamento</string>
    <string name="pref_update_interval_summary">Definire la frequenza di aggiornamenti che verrà eseguita</string>
    <string name="pref_keep_max_items">Numero di elementi più recenti da mantenere</string>
    <string name="pref_keep_max_items_summary">Massimo dumero di avvisi da tenere durante la pulitura del canale</string>
    <string name="pref_max_items_for_channel">Max avvisi per sottoscrizione</string>
    <string name="pref_max_items_for_channel_summary">Massimo dumero di avvisi da caricare per canale</string>
    <string name="pref_notification_sound">Abilitare audio</string>
    <string name="pref_notification_vibrate">Abilitare vibrazione</string>
    <string name="pref_notification_light">Abilitare spia led</string>
    <string name="pref_notification_univrapp">Notifiche UnivrApp</string>
    <string name="pref_notification_univrapp_summary">Permette di ricevere notifiche da parte dello sviluppatore.</string>

    <!-- UPDATE INTERVAL -->
    <string name="minutes_15">Ogni 15 minuti</string>
    <string name="minutes_30">Ogni 30 minuti</string>
    <string name="each_hour">Ogni ora</string>
    <string name="hours_3">Ogni 3 ore</string>
    <string name="hours_5">Ogni 5 ore</string>
    <string name="hours_7">Ogni 7 ore</string>

    <!-- KEEP MAX -->
    <string name="clearAll">Elimina tutto</string>
    <string name="keep_20">Tieni Max 20 avvisi</string>
    <string name="keep_50">Tieni Max 50 avvisi</string>
    <string name="keep_100">Tieni Max 100 avvisi</string>
    <string name="keep_1000">Tieni Max 1000 avvisi</string>

    <!-- MAX FOR CHANNEL -->
    <string name="max_10">Max 10 avvisi</string>
    <string name="max_20">Max 20 avvisi</string>
    <string name="max_50">Max 50 avvisi</string>
    <string name="max_100">Max 100 avvisi</string>
    <string name="max_200">Max 200 avvisi</string>
    <string name="pull_to_refresh_pull_label">Tirare per aggiornare&#8230;</string>
    <string name="pull_to_refresh_release_label">Rilascia per aggiornare&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Caricamento&#8230;</string>
    <string name="pull_to_refresh_tap_label">Premere per aggiornare&#8230;</string>

    <!-- GCM -->
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>

    <!-- ACRA -->
    <string name="crash_toast_text">Ooooops! è successo un imprevisto, ma un report è stato inviato allo sviluppatore per aiutarlo a risolvere questo bug!</string>

</resources>