<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_subscribe"
        android:icon="@drawable/ic_menu_add"
        android:showAsAction="ifRoom"
        android:title="@string/subscribe"/>
    <item
        android:id="@+id/menu_unsubscribe"
        android:icon="@drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/unsubscribe"/>
    
     <item
        android:id="@+id/menu_selectAll"
        android:icon="@drawable/ic_menu_select_all"
        android:showAsAction="never"
        android:title="@string/select_all"/>
    
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/settings"/>
    
    <item
        android:id="@+id/menu_reset"
        android:icon="@drawable/trash"
        android:showAsAction="never"
        android:title="@string/reset"/>
    
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_menu_info_details"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>