<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="12dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dip"
            android:paddingTop="5dip"
            android:text="@string/info_about_me"
            android:textSize="14sp"
            android:typeface="serif" />

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:text="Davide Vallicella"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#111111"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/contact_thumbnail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image"
            android:padding="3dip" >

            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/desc"
                android:scaleType="fitCenter"
                android:src="@drawable/io" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ellipsize="end"
        android:padding="5dp"
        android:singleLine="true"
        android:text="@string/contact_header"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/abs__holo_blue_light"
        android:textSize="13sp"
        android:textStyle="bold" />

    <View style="@style/HeaderDivider" />

    <LinearLayout
        android:id="@+id/contact_mail_row_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/contact_mail"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/btn_grey_light"
            android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="5dp" >

            <TextView
                android:id="@+id/contact_email"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignBottom="@+id/email"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/email"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="vallicella.davide@gmail.com"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/contact_email_action"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:contentDescription="@string/desc"
                    android:focusable="true"
                    android:scaleType="center"
                    android:src="@drawable/ic_action_mail" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <View style="@style/HeaderDivider" />

   <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="Offrimi un caffè"
            android:textColor="@color/btn_grey_light"
            android:textSize="13sp" />

    <LinearLayout
        android:id="@+id/paypal_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center" >

        <ProgressBar
            android:id="@+id/paypal_load"
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

</LinearLayout>