<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="12dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/contact_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:background="@drawable/image"
                android:padding="3dip" >

                <ImageView
                    android:id="@+id/contact_image"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/desc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/thumb" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/contact_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:ellipsize="end"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#111111"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contact_office"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:paddingLeft="2dp"
                    android:paddingRight="2dp"
                    android:textColor="#111111"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/contact_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/abs__holo_blue_light"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View style="@style/HeaderDivider" />

        <LinearLayout
            android:id="@+id/contact_phone_row_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/contact_office"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/btn_grey_light"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <TextView
                    android:id="@+id/contact_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/phone"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/phone"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:id="@+id/contact_phone_action"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:contentDescription="@string/desc"
                        android:focusable="true"
                        android:scaleType="center"
                        android:src="@drawable/ic_action_phone_start" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_mail_row_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/contact_mail"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/btn_grey_light"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="5dp" >

                <TextView
                    android:id="@+id/contact_email"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_alignBottom="@+id/email"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/email"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:textSize="16sp" />

                <LinearLayout
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal"
                    android:padding="3dp" >

                    <ImageView
                        android:id="@+id/contact_email_action"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="true"
                        android:contentDescription="@string/desc"
                        android:focusable="true"
                        android:scaleType="center"
                        android:src="@drawable/ic_action_mail" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:padding="5dp"
            android:singleLine="true"
            android:text="@string/info_header"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/abs__holo_blue_light"
            android:textSize="13sp"
            android:textStyle="bold" />

        <View style="@style/HeaderDivider" />

        <LinearLayout
            android:id="@+id/contact_department_row_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="5dp"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/contact_department"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/btn_grey_light"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/contact_department"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>